2009-12-19  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Invalid url should raise SYNTAX_ERR exception.
        https://bugs.wbekit.org/show_bug.cgi?id=32700

        * websocket/tests/bad-sub-protocol-expected.txt: add CONSOLE MESSAGEs
        * websocket/tests/script-tests/url-parsing.js: add invalid url tests.
          Also changed url from ws://127.0.0.1/ to ws://127.0.0.1:8880/websocket/tests/simple to make it sure no errors on console message for these tests by not receiving unexpected response from 127.0.0.1:80.
        * websocket/tests/url-parsing-expected.txt:

2009-12-19  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Add tests to check filter, mask, clip, opacity and marker ordering
        https://bugs.webkit.org/show_bug.cgi?id=14010

        Tests the right order of filter and clipper/masker aplied to a SVG
        object.

        * platform/mac/svg/filters/filter-clip-expected.checksum: Added.
        * platform/mac/svg/filters/filter-clip-expected.png: Added.
        * platform/mac/svg/filters/filter-clip-expected.txt: Added.
        * svg/filters/filter-clip.svg: Added.

2009-12-19  Benjamin Otte  <otte@gnome.org>

        Reviewed by Gustavo Noronha.

        Rebaselined test after revision 52335.

        * platform/gtk/svg/css/getComputedStyle-basic-expected.txt: Added.

2009-12-19  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=28153
        can't middle-button paste within a single window

        * LayoutTests/platform/gtk/editing/pasteboard/middle-button-paste-expected.txt: Added
        * LayoutTests/platform/gtk/editing/pasteboard/middle-button-paste.html: Adeed

2009-12-19  MORITA Hajime  <morrita@gmail.com>

        Reviewed by Darin Adler.

        WebCore::Range::surroundContents NULL pointer crash.

        https://bugs.webkit.org/show_bug.cgi?id=31684
