@@ -595,7 +595,7 @@ static Frame* createWindow(Frame* callingFrame,
         }
     }
 
-    if (protocolIsJavaScript(url) || ScriptController::isSafeScript(newFrame)) {
+    if (!protocolIsJavaScript(url) || ScriptController::isSafeScript(newFrame)) {
         KURL completedUrl =
             url.isEmpty() ? KURL(ParsedURLString, "") : completeURL(url);
         bool userGesture = processingUserGesture();
